# huffman-rs

./: .gitignore  Cargo.toml  README.md
bitstream/: Cargo.toml
bitstream/src/: bitreader.rs  bitwriter.rs  lib.rs  vecstream.rs
src/: freq_tree.rs  huffman_decoder.rs  huffman_encoder.rs  lib.rs
