[package]
name = "huffman"
version = "0.1.0"
authors = ["mattbrownca <6611786+MattBrownCA@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream = { path = "./bitstream" }

[dev-dependencies]
rand = "0.7.3"
